create scss variables

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,8 +3,8 @@
 /* ============================================= */
 
 * {
-	font-family: 'Lato', sans-serif;
-	color: #777;
+	font-family: $font-stack;
+	color: $color-text;
 	box-sizing: border-box;
   }
   
@@ -27,18 +27,18 @@
   }
   
   .headline-secondary {
-	font-weight: 300;
+	font-weight: $font-light;
 	color: #777;
   }
   
   .link {
 	color: #51ddfc;
-	font-weight: 700;
+	font-weight: $font-bold;
   }
   
   .blockquote {
 	font-size: 1.5em;
-	font-weight: 300;
+	font-weight: $font-light;
 	font-style: italic;
 	margin-left: 20px;
 	padding-left: 20px;
