updated colors and varaibles, added mixin

--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,6 +1,5 @@
-/* ============================================= */
-  /*              Media Queries                    */
-  /* ============================================= */
+/* ---- Media Queries ---- */
+
   @media (min-width: $break) {
   
     .container {
