--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* ---- Color Variables ---- */
+/* ---- Font Variables ---- */
+/* ---- Media Variables ---- */
+/* ---- Button Hover Effect ---- */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -342,7 +346,7 @@ template {
 /* ============================================= */
 * {
   font-family: "Lato", sans-serif;
-  color: #777;
+  color: #3d4040;
   box-sizing: border-box;
 }
 
@@ -354,21 +358,18 @@ a {
   text-decoration: none;
 }
 
-/* ============================================= */
-/*              Typography                       */
-/* ============================================= */
+/* ---- Typography ---- */
 .headline-primary {
-  color: #58e1c1;
+  color: #f47a60;
   margin-left: 10px;
 }
-
 .headline-secondary {
   font-weight: 300;
-  color: #777;
+  color: #3d4040;
 }
 
 .link {
-  color: #51ddfc;
+  color: #58a19a;
   font-weight: 700;
 }
 
@@ -378,13 +379,12 @@ a {
   font-style: italic;
   margin-left: 20px;
   padding-left: 20px;
-  border-left: 8px solid #58e1c1;
+  border-left: 8px solid #7fe7dc;
   border-radius: 5px;
+  color: #316879;
 }
 
-/* ============================================= */
-/*              Buttons                          */
-/* ============================================= */
+/* ---- Buttons ---- */
 .btn {
   margin-top: 15px;
   width: 100%;
@@ -396,28 +396,41 @@ a {
 }
 
 .default {
-  background-color: #51ddfc;
+  background: #336a69;
+}
+.default:hover {
+  background: #56adac;
 }
 
 .error {
-  background-color: #e4757a;
+  background: #ef4518;
+}
+.error:hover {
+  background: #f69277;
 }
 
 .info {
-  background-color: #927bc1;
+  background: #58a19a;
+}
+.info:hover {
+  background: #98c7c2;
 }
 
 .success {
-  background-color: #63cc82;
+  background: #d4d790;
+}
+.success:hover {
+  background: #f1f2db;
 }
 
 .warning {
-  background-color: #fd7856;
+  background: #f47a60;
+}
+.warning:hover {
+  background: #fbcabf;
 }
 
-/* ============================================= */
-/*              Forms                            */
-/* ============================================= */
+/* ---- Forms---- */
 .form {
   flex-basis: 100%;
 }
@@ -428,7 +441,7 @@ a {
   margin: 10px auto 0;
   border: none;
   padding: 10px;
-  border-bottom: 5px solid #58e1c1;
+  border-bottom: 5px solid #7fe7dc;
 }
 
 .hidden {
@@ -440,16 +453,13 @@ a {
   overflow: hidden;
 }
 
-/* ============================================= */
-/*              Navigation                       */
-/* ============================================= */
+/* ---- Navigation ---- */
 .nav {
   padding-left: 0;
   flex-basis: 100%;
   display: flex;
   flex-direction: column;
 }
-
 .nav-link {
   text-align: center;
   border-radius: 5px;
@@ -458,15 +468,12 @@ a {
   width: 100%;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-
 .nav-link:hover {
   color: #fff;
-  background-color: #58e1c1;
+  background-color: #316879;
 }
 
-/* ============================================= */
-/*              Images                           */
-/* ============================================= */
+/* ---- Images ---- */
 .img-avatar {
   display: block;
   margin-left: auto;
@@ -475,7 +482,6 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
-
 .img-frame {
   display: block;
   margin-left: auto;
@@ -483,18 +489,15 @@ a {
   margin-top: 10px;
   max-width: 100%;
   padding: 13px;
-  border: 1px solid #ccc;
+  border: 1px solid #3d4040;
 }
-
 .img-logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* ============================================= */
-/*              Grid System                      */
-/* ============================================= */
+/* ---- Grid System ---- */
 .container {
   padding: 0 10px;
 }
@@ -514,60 +517,58 @@ a {
 }
 
 .theme.col-1 {
-  background-color: #927bc1;
+  background-color: #3d4040;
 }
 
 .theme.col-2 {
-  background-color: #fd7856;
+  background-color: #336a69;
 }
 
 .theme.col-3 {
-  background-color: #deb2ee;
+  background-color: #58a19a;
 }
 
 .theme.col-4 {
-  background-color: #7ee6fd;
+  background-color: #f47a60;
 }
 
 .theme.col-5 {
-  background-color: #88d9a0;
+  background-color: #ced7d8;
 }
 
 .theme.col-6 {
-  background-color: #4da2bb;
+  background-color: #d4d790;
 }
 
 .theme.col-7 {
-  background-color: #ec9fa3;
+  background-color: #7fe7dc;
 }
 
 .theme.col-8 {
-  background-color: #fd9f85;
+  background-color: #fbd7cf;
 }
 
 .theme.col-9 {
-  background-color: #e4757a;
+  background-color: #212323;
 }
 
 .theme.col-10 {
-  background-color: #63cc82;
+  background-color: #23374b;
 }
 
 .theme.col-11 {
-  background-color: #51ddfc;
+  background-color: #fff;
 }
 
 .theme.col-12 {
-  background-color: #80e8d1;
+  background-color: #d5e0e4;
 }
 
 .card {
   flex-basis: 100%;
 }
 
-/* ============================================= */
-/*              Media Queries                    */
-/* ============================================= */
+/* ---- Media Queries ---- */
 @media (min-width: 768px) {
   .container {
     max-width: 1400px;
