--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,7 +4,7 @@
 
 * {
 	font-family: $font-stack;
-	color: $color-text;
+	color: $color-dark-grey;
 	box-sizing: border-box;
   }
   
@@ -17,22 +17,21 @@
   }
   
   
-  /* ============================================= */
-  /*              Typography                       */
-  /* ============================================= */
-  
-  .headline-primary {
-	color: #58e1c1;
-	margin-left: 10px;
-  }
-  
-  .headline-secondary {
-	font-weight: $font-light;
-	color: #777;
+  /* ---- Typography ---- */
+
+  .headline {
+	&-primary {
+		color: $color-dark-coral;
+		margin-left: 10px;
+	}
+	&-secondary {
+		font-weight: $font-light;
+		color: $color-dark-grey;
+	}
   }
   
   .link {
-	color: #51ddfc;
+	color: $color-dark-turquoise;
 	font-weight: $font-bold;
   }
   
@@ -42,6 +41,7 @@
 	font-style: italic;
 	margin-left: 20px;
 	padding-left: 20px;
-	border-left: 8px solid #58e1c1;
+	border-left: 8px solid $color-turquoise;
 	border-radius: 5px;
+	color: $color-dark-teal;
   }
