--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,33 +1,32 @@
-  /* ============================================= */
-  /*              Buttons                          */
-  /* ============================================= */
+/* ---- Buttons ---- */
   
   .btn {
 	margin-top: 15px;
 	width: 100%;
-	color: #fff;
+	color: $color-white;
 	border: none;
 	padding: 10px 0;
 	text-transform: uppercase;
-	border-radius: 5px;
+  border-radius: 5px;
   }
+
   
   .default {
-	background-color: #51ddfc;
+    @include btn-theme ($color-dark-green);
   }
   
   .error {
-	background-color: #e4757a;
+    @include btn-theme ($color-red);
   }
   
   .info {
-	background-color: #927bc1;
+    @include btn-theme ($color-dark-turquoise);
   }
   
   .success {
-	background-color: #63cc82;
+    @include btn-theme ($color-lime-green);
   }
   
   .warning {
-	background-color: #fd7856;
+    @include btn-theme ($color-dark-coral);
   }
