--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,7 +1,4 @@
-  
-  /* ============================================= */
-  /*              Forms                            */
-  /* ============================================= */
+/* ---- Forms---- */
   
   .form {
 	flex-basis: 100%;
@@ -13,7 +10,7 @@
 	margin: 10px auto 0;
 	border: none;
 	padding: 10px;
-	border-bottom: 5px solid #58e1c1;
+	border-bottom: 5px solid $color-turquoise;
   }
   
   .hidden {
