--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,6 +1,4 @@
-/* ============================================= */
-  /*              Grid System                      */
-  /* ============================================= */
+/* ---- Grid System ---- */
   
   .container {
 	padding: 0 10px;
@@ -21,51 +19,51 @@
   }
   
   .theme.col-1 {
-	background-color: #927bc1;
+	background-color: $color-dark-grey;
   }
   
   .theme.col-2 {
-	background-color: #fd7856;
+	background-color: $color-dark-green;
   }
   
   .theme.col-3 {
-	background-color: #deb2ee;
+	background-color: $color-dark-turquoise;
   }
   
   .theme.col-4 {
-	background-color: #7ee6fd;
+	background-color: $color-dark-coral;
   }
   
   .theme.col-5 {
-	background-color: #88d9a0;
+	background-color: $color-grey;
   }
   
   .theme.col-6 {
-	background-color: #4da2bb;
+	background-color: $color-lime-green;
   }
   
   .theme.col-7 {
-	background-color: #ec9fa3;
+	background-color: $color-turquoise;
   }
   
   .theme.col-8 {
-	background-color: #fd9f85;
+	background-color: $color-light-coral;
   }
   
   .theme.col-9 {
-	background-color: #e4757a;
+	background-color: $color-black;
   }
   
   .theme.col-10 {
-	background-color: #63cc82;
+	background-color: $color-dark-blue;
   }
   
   .theme.col-11 {
-	background-color: #51ddfc;
+	background-color: $color-white;
   }
   
   .theme.col-12 {
-	background-color: #80e8d1;
+	background-color: $color-light-teal;
   }
   
   .card {
